--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.support:support-v4:26.1.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     // room
