--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     // room
