--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,20 +4,24 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CPS731_TermProject">
-        <activity android:name=".InfoActivity"></activity>
-        <activity android:name=".AlarmActivity" android:noHistory="true" />
+        android:theme="@style/Theme.CPS731_TermProject"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".NoInternetActivity"
+            android:noHistory="true" ></activity>
+        <activity android:name=".InfoActivity" />
+        <activity
+            android:name=".AlarmActivity"
+            android:noHistory="true" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity">
